--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
+    "@agm/js-marker-clusterer": "^1.1.0",
     "@angular/animations": "~8.2.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
@@ -25,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery.nicescroll": "^3.7.6",
+    "js-marker-clusterer": "^1.0.0",
     "line-awesome": "^1.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
