--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@aspnet/signalr": "^1.1.4",
     "@icon/themify-icons": "^1.0.1",
     "alertifyjs": "^1.11.4",
     "bootstrap": "^4.3.1",
